[package]

name = "nntp"
version = "0.0.3"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT"

[lib]
name = "nntp"
path = "src/nntp.rs"

[[bin]]
name = "example"
path = "example.rs"