[package]

name = "nntp"
version = "0.0.5"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "nntp"
path = "src/nntp.rs"

[[bin]]
name = "example"
path = "example.rs"
