[package]
name = "nntp_client"
version = "0.0.5"
authors = ["Xavier Lange <xrlange@gmail.com>", "Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-nntp"
description = "NNTP client for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0"
bytes = "0"
flate2 = "1"
log = "0"
native-tls = "0"
pretty-bytes = "0"
prettytable-rs = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yenc = "0"