[package]
name = "rust-nntp-indexer"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nntp_client = { path = "../nntp-client" }
log = "0"
serde_json = "1"
tokio = { version = "0.2.11", features = ["full"] }
elasticsearch = "7.5.2-alpha.1"
pretty-bytes = "0"
itertools = "0"
env_logger = "0"
