[package]
name = "rust-nntp-indexer"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7"
env_logger = "0"
itertools = "0"
log = "0"
nntp_client = { path = "../nntp-client" }
pretty-bytes = "0"
serde_json = "1"
tokio = { version = "0", features = ["full"] }
